# temp

./: .dockerignore  .gitignore  Dockerfile  calling-agent.Dockerfile  docker-compose.yml  nohup.out  pyproject.toml  supervisord.conf
agent/: Dockerfile  conf.py  config.yml  nohup.out  pyproject.toml
agent/assets/: rephrase.md  state.md  summary.md  system_prompt.md
agent/assets/jsons/: responses.json
agent/assets/prompts/: manager.md  persona.md  query_rephraser.md
agent/src/agent/: server.py
agent/src/agent/helpers/: __init__.py  helpers_.py
agent/src/agent/models/: __init__.py  models_.py
agent/src/agent/routers/: __init__.py  routers.py
agent/src/agent/services/: services.py
agent/src/agent/state/: __init__.py  state.py
benchmarking/agenbenchmarking/: config.yml  jecrc_scenarios.json  pyproject.toml
benchmarking/agenbenchmarking/assets/: fees.json  final_verdict_prompt.md  jecrc_scenarios.json  prompt.md  results.json  tresults.json
benchmarking/agenbenchmarking/src/agenbenchmarking/: __init__.py  scenarios_creation.py  scenarios_testing.py  streamlit_app.py
benchmarking/llmbenchmarking/: config.yml  pyproject.toml
benchmarking/llmbenchmarking/assets/: benchmark.json  input_.txt
benchmarking/llmbenchmarking/src/llmbenchmarking/: __init__.py  benchmarking.py
benchmarking/metadatabenchmarking/: pyproject.toml
benchmarking/metadatabenchmarking/src/metadatabenchmarking/: __init__.py  app.py
benchmarking/ragbenchmarking/: pyproject.toml
benchmarking/ragbenchmarking/src/ragbenchmarking/: __init__.py  benchmarking.py
benchmarking/sttbenchmarking/: config.yml  pyproject.toml
benchmarking/sttbenchmarking/assets/: benchmark.json  data.csv  inp_data.json
benchmarking/sttbenchmarking/src/sttbenchmarking/: __init__.py  audio_creation.py  benchmarking.py
benchmarking/ttsbenchmarking/: pyproject.toml
benchmarking/ttsbenchmarking/src/ttsbenchmarking/: __init__.py  app.py
call/: .env.example  Dockerfile  conf.py  config.yml  pyproject.toml
call/assets/plivo_/: webhook_xml.xml
call/assets/prompts/: answer.md  query_builder.md
call/src/call/: __init__.py  main.py  server.py
call/src/call/connection/: __init__.py  connection_.py
call/src/call/event/: __init__.py  cleared_event.py  event.py  media_event.py  played_event.py  start_event.py
call/src/call/loader/: __init__.py  api_.py  loader.py  logging_.py  services.py
call/src/call/proto/: ai_service.proto  ai_service_pb2.py  ai_service_pb2_grpc.py
call/src/call/services/: services.py
call/src/call/session/: __init__.py  session.py
call/src/call/state/: state.py
chroma_store/: chroma.sqlite3
llm/: config.yml  pyproject.toml
llm/src/llm/: __init__.py
llm/src/llm/clients/: __init__.py  azure_openai_.py  groq_.py  llm.py
metadata/: Dockerfile  conf.py  file.json  pyproject.toml
metadata/src/metadata/: __init__.py  config.yml  server.py
metadata/src/metadata/scripts/: __init__.py
metadata/src/metadata/scripts/loader/: loader.py
metadata/src/metadata/scripts/services/: __init__.py  llm_.py  main.py  services.py  transcription_.py
metadata/src/metadata/state/: __init__.py  state_.py
rag/: Dockerfile  config.yml  nohup.out  pyproject.toml
rag/chroma_store/a804039c-ac3e-44e7-af14-886b5f4cb33d/: index_metadata.pickle
rag/src/rag/: server.py
src/vxp_agent_backend/: __init__.py
stt/: config.yml  pyproject.toml
stt/src/stt/: __init__.py
stt/src/stt/clients/: README.md  __init__.py  assemblyai_.py  deepgram_.py  google_.py  groq_.py  stt.py
tts/: config.yml  pyproject.toml
tts/src/tts/: __init__.py
tts/src/tts/clients/: README.md  __init__.py  google_.py  murf_.py  smallestai_.py  tts.py
