[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "cerebras>=0.0.1",
    "fastapi>=0.128.0",
    "gunicorn>=23.0.0",
    "llm",
    "openai>=2.16.0",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]

[project.scripts]
agent = "agent.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
stt = { workspace = true }
tts = { workspace = true }
llm = { workspace = true }
