[project]
name = "metadata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "llm",
    "logging>=0.4.9.6",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "stt",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "uvicorn>=0.37.0",
]

[project.scripts]
metadata = "metadata.server:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
stt = { workspace = true }
llm = { workspace = true }
