[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.4.1",
    "datasets>=4.1.1",
    "effdet>=0.4.1",
    "einops>=0.8.1",
    "fastapi>=0.116.2",
    "google-cloud-vision>=3.10.2",
    "groq>=0.37.1",
    "llm",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20250506",
    "pi-heif>=1.1.0",
    "pikepdf>=9.11.0",
    "pillow>=12.1.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.2",
    "sentence-transformers>=5.1.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]

[project.scripts]
rag = "rag.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
llm = { workspace = true }
