[project]
name = "tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "google-cloud-texttospeech>=2.29.0",
    "smallestai>=4.1.0",
]

[project.scripts]
tts = "tts:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
