[project]
name = "agenbenchmarking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "llm",
    "plotly>=6.5.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

[project.scripts]
sce_cre = "agenbenchmarking.scenarios_creation:main"
sce_tes = "agenbenchmarking.scenarios_testing:main"
sce_str = "agenbenchmarking:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
llm = { workspace = true }
