[project]
name = "ragbenchmarking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "rag",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
]

[project.scripts]
ragbenchmarking = "ragbenchmarking:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
rag = { workspace = true }
